# bundestag_nlp

./: .env  .gitignore  01_scrape_data.py  02_setup_database.py  03_parse_and_load_data.py  README.md  pyproject.toml
src/analysis/: analyze_data.py  sentiment_analysis.py
src/fetch_data/: get_data.py
src/preprocessing/: parse_data.py  scrape_data.py
src/sqlite/: __init__.py  load_data_into_db.py  setup_db.py
