[tool.poetry]
name = "bundestag-nlp"
version = "0.1.0"
description = ""
authors = ["Philipp Fischer <philipp.fischer@js-soft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.9.1"
black = {extras = ["jupyter"], version = "^24.10.0"}
pandas = "^2.2.3"
matplotlib = "^3.10.0"
bs4 = "^0.0.2"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
