[tool.poetry]
name = "bundestag-nlp"
version = "0.1.0"
description = ""
authors = ["Philipp Fischer <philipp.fischer@js-soft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
nltk = "^3.9.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
requests = "^2.32.3"
spacy = "^3.8.4"
de-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl"}
ipykernel = "^6.29.5"
tqdm = "^4.67.1"
ipywidgets = "^8.1.5"
jupyter = "^1.1.1"
plotly = "^6.0.0"
beautifulsoup4 = "^4.13.3"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.10.0"}
isort = "^6.0.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
